--- a/increase/css/main.css
+++ b/increase/css/main.css
@@ -1,1 +1,22 @@
+body {
+    box-sizing: border-box;
+    background: url(../img/1.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    background-color: #464646;
+}
 
+.form-group {
+    padding-top: 10px;
+}
+
+.form-group label {
+    color: white;
+    font-size: 1em;
+}
+
+.text-center {
+    color: white;
+}
